Provider Practise OK

--- a/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
+++ b/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
@@ -40,7 +40,7 @@
 
 				<p:column headerText="Providers">
 					<table>
-						<ui:repeat value="#{user.practises.toArray()}" var="t">
+						<ui:repeat value="#{practise.providers.toArray()}" var="t">
 
 							<tr>
 								<td style="border: 0px;"><h:outputText value="#{t.name}" />
