--- a/src/main/webapp/Views/Secured/User/UserView.xhtml
+++ b/src/main/webapp/Views/Secured/User/UserView.xhtml
@@ -87,7 +87,7 @@
 
 					<p:panelGrid id="panelGrid" columns="2">
 						<p:outputLabel for="tfUsername" value="UserName:" />
-						<p:inputText id="tfUsername" value="${userController.user.name}"></p:inputText>
+						<p:inputText id="tfUsername" value="${userController.user.appUserName}"></p:inputText>
 
 						<p:outputLabel for="tfPassword" value="Password:" />
 						<p:inputText id="tfPassword"
