--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -47,7 +47,7 @@
 					        <p:selectOneMenu id="advanced"
 								 panelStyle="width:180px"
 								effect="fade" var="t" style="width:160px">
-								<f:selectItems value="#{provider.practiceList}" var="practise"
+								<f:selectItems value="#{provider.practiceList.toArray()}" var="practise"
 									itemLabel="#{practise.name}" itemValue="#{practise}" />
 
 								<p:column>
