--- a/src/main/webapp/Views/Template/top.xhtml
+++ b/src/main/webapp/Views/Template/top.xhtml
@@ -12,11 +12,9 @@
 <h:body>
 	<ui:composition>
 	
-	<!-- rendered="#{sec:areAnyGranted('Admin')}" -->
-		<!-- <sec:authorize access="hasRole('ROLE_ADMIN')"> -->
-			<h:outputLabel value="IS Admin logged in"
-				rendered="#{sec:areAnyGranted('ROLE_ADMIN')}" />
-		<!-- </sec:authorize> -->
+		<div>
+			<h:graphicImage value="/Images/Sypore_Logo.jpg" width="130" />
+		</div>
 	
 		<h:form>
 			<!-- <p:growl id="messages" /> -->
