--- a/src/main/webapp/Views/Unsecured/Login/index.xhtml
+++ b/src/main/webapp/Views/Unsecured/Login/index.xhtml
@@ -13,6 +13,13 @@
 		.custom {
     		width: 285px !important;
 		}
+		
+		#cont
+		{
+			padding-top: 140px;
+		}
+		
+		body { background: #eee !important; } 
 
 		
 	</style>
@@ -35,7 +42,7 @@
 		 />
 	</h:form> -->
 
-	<div class="container">
+	<div class="container" id="cont">
 	
 		<div class="col-md-10 col-md-offset-4">
 			<h:form class="form-signin">
