--- a/src/main/webapp/Views/Template/MainTemplate.xhtml
+++ b/src/main/webapp/Views/Template/MainTemplate.xhtml
@@ -3,6 +3,17 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
+
+<style>
+#footer {
+   position:absolute;
+   bottom:0;
+   width:99%;
+   height:40px;   /* Height of the footer */
+   background:#eee;
+}
+</style>
+
 </h:head>
 
 <h:body>
@@ -19,7 +30,7 @@
     </div>
     <ui:debug/>
  
-    <div id="divMenu">
+    <div id="footer">
         <ui:insert name="footer">
             <ui:include src="/Views/Template/Footer.xhtml" />
         </ui:insert>
