--- a/src/main/webapp/Views/Template/top.xhtml
+++ b/src/main/webapp/Views/Template/top.xhtml
@@ -38,11 +38,11 @@
 					<p:menuitem value="Practise" icon="ui-icon-gear"
 						action="#{practiseController.viewPractise()}" />
 
-				<p:menuitem value="Entity" action="#{entityController.viewEntity()}" icon="ui-icon-contact" />
+				<p:menuitem value="Entity" action="#{entityController.viewEntity()}" icon="ui-icon-contact" rendered="#{sec:areAnyGranted('ROLE_SUPER_ADMIN')}" />
 
 				<p:menuitem value="Payer" action="#{payerController.view()}" icon="ui-icon-user-1" />
 
-				<p:menuitem value="Role" action="#{roleController.view()}" icon="ui-icon-user-1" />
+				<p:menuitem value="Role" action="#{roleController.view()}" icon="ui-icon-user-1" rendered="#{sec:areAnyGranted('ROLE_SUPER_ADMIN')}" />
 
 				<p:menuitem value="Provider" action="#{providerController.view()}" icon="ui-icon-user-1" />
 
