Working on user

--- a/src/main/webapp/Views/Template/top.xhtml
+++ b/src/main/webapp/Views/Template/top.xhtml
@@ -35,7 +35,7 @@
 							action="#{userController.showUserMainView()}"
 							 />
 
-					<p:menuitem value="Practise" icon="ui-icon-gear"
+					<p:menuitem value="Practice" icon="ui-icon-gear"
 						action="#{practiseController.viewPractise()}" />
 
 				<p:menuitem value="Entity" action="#{entityController.viewEntity()}" icon="ui-icon-contact" rendered="#{sec:areAnyGranted('ROLE_SUPER_ADMIN')}" />
