--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -44,7 +44,15 @@
 						
 						<p:column headerText="Practices">
 							
-					        <p:selectOneMenu id="advanced"
+							<table>
+							<ui:repeat var="#{provider.practiceList.toArray()}" value="t">
+							<tr>
+								<td style="border: 0px;"><h:outputText value="#{t.name}" /> </td>
+							</tr>
+							</ui:repeat>
+							</table>
+							
+					        <!-- <p:selectOneMenu id="advanced"
 								 panelStyle="width:180px"
 								effect="fade" var="t" style="width:160px">
 								<f:selectItems value="#{provider.practiceList.toArray()}" var="practise"
@@ -54,7 +62,7 @@
 									<h:outputText value="#{t.name}" />
 								</p:column>
 								
-							</p:selectOneMenu>
+							</p:selectOneMenu> -->
 							
 						</p:column>
 
