--- a/src/main/webapp/Views/Secured/User/UserView.xhtml
+++ b/src/main/webapp/Views/Secured/User/UserView.xhtml
@@ -2,8 +2,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:sec="http://www.springframework.org/security/tags">
+	xmlns:f="http://java.sun.com/jsf/core">
 
 <h:head></h:head>
 
@@ -28,7 +27,7 @@
 				<p:dataTable value="${userController.listUsers}" var="user">
 
 					<p:column headerText="Name">
-					#{user.name}
+					#{user.appUserName}
 					</p:column>
 					<p:column headerText="Email">
 					#{user.email}
@@ -88,15 +87,14 @@
 
 					<p:panelGrid id="panelGrid" columns="2">
 						<p:outputLabel for="tfUsername" value="UserName:" />
-						<p:inputText id="tfUsername"
-							value="${userController.user.appUserName}"></p:inputText>
+						<p:inputText id="tfUsername" value="#{userController.user.appUserName}"></p:inputText>
 
 						<p:outputLabel for="tfPassword" value="Password:" />
 						<p:inputText id="tfPassword"
-							value="${userController.user.password}"></p:inputText>
+							value="#{userController.user.password}"></p:inputText>
 
 						<p:outputLabel for="tfEmail" value="Email:" />
-						<p:inputText id="tfEmail" value="${userController.user.email}"></p:inputText>
+						<p:inputText id="tfEmail" value="#{userController.user.email}"></p:inputText>
 
 						<p:outputLabel for="listEntity" value="Select Entity:" />
 
@@ -110,15 +108,15 @@
 							<f:selectItems value="#{userController.listEntities}"
 								var="entity" itemLabel="#{entity.name}" itemValue="#{entity}" />
 							<p:ajax event="change" execute="@this"
-								listener="#{userController.entityChanged()}" update=""></p:ajax>
+								listener="#{userController.entityChanged()}" update="listPractiseID"></p:ajax>
 
 							<p:column>
 								<h:outputText value="#{t.name}" />
 							</p:column>
 						</p:selectOneMenu>
 
-						<p:outputLabel for="listPractise" value="Select Practise:" />
-						<p:selectCheckboxMenu id="listPractise"
+						<p:outputLabel for="listPractiseID" value="Select Practise:" />
+						<p:selectCheckboxMenu id="listPractiseID"
 							value="#{userController.selectedPrac}" label="Select Practices"
 							style="width:177px" panelStyle="width:250px"
 							converter="practiseConverter">
@@ -142,13 +140,10 @@
 								<h:outputText value="#{t.name}" />
 							</p:column>
 						</p:selectOneMenu>
-						
-						
-						<sec:authorize access="hasRole('ROLE_SUPER_ADMIN')">
-							<h:outputText value="Can Create User: " />
-							<p:selectBooleanCheckbox
-								value="#{userController.user.canCreateUser}" />
-						</sec:authorize>
+
+						<h:outputText value="Can Create User: " />
+						<p:selectBooleanCheckbox
+							value="#{userController.user.canCreateUser}" />
 						<h:outputText value="Send Email: " />
 						<p:selectBooleanCheckbox value="#{userController.sendEmail}" />
 
