--- a/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
+++ b/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
@@ -2,13 +2,12 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 <h:head>
 </h:head>
 
 <h:body>
-
-
 
 	<ui:composition template="/Views/Template/MainTemplate.xhtml">
 		<ui:define name="pageTitle">
@@ -96,12 +95,21 @@
 						<p:message for="practiseName" display="icon" id="iconAlertName" />
 						<!-- <h:panelGroup> -->
 
-						<p:outputLabel for="entities" value="Entity: " />
+
+						<p:outputLabel for="entity" value="Entity: "
+							rendered="#{practiseController.isSingleItemInEntityList()}" />
+						<p:outputLabel id="entity"
+							value="#{practiseController.listPractise.get(0).getName()}"
+							rendered="#{practiseController.isSingleItemInEntityList()}" />
+
+						<p:outputLabel for="entities" value="Entity: "
+							rendered="#{practiseController.isMoreItemsInEntityList()}" />
 						<p:selectOneMenu id="entities"
 							value="#{practiseController.currentEntity}"
 							converter="entityConverter" panelStyle="width:180px"
 							effect="fade" var="t" style="width:160px" filter="true"
-							filterMatchMode="startsWith">
+							filterMatchMode="startsWith"
+							rendered="#{practiseController.isMoreItemsInEntityList()}">
 
 							<f:selectItems value="#{practiseController.listEntities}"
 								var="entity" itemLabel="#{entity.name}" itemValue="#{entity}" />
