--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -22,7 +22,7 @@
 					<h:panelGrid columns="7" cellpadding="0">  
 					
 						<!-- <p:outputLabel for="idProviders" value="Select Provider: " /> -->
-						<p:selectOneMenu id="idProviders" value="#{reportsController.currentProvider}"
+						<!-- <p:selectOneMenu id="idProviders" value="#{reportsController.currentProvider}"
 								panelStyle="width:180px" effect="fade" converter="providerConverter"
 								var="t" style="width:177px">
 								
@@ -35,15 +35,31 @@
 								<p:column>
 									<h:outputText value="#{t.name}" />
 								</p:column>
-							</p:selectOneMenu>
+							</p:selectOneMenu> -->
+							
+							
+						<p:selectCheckboxMenu id="idProviders" value="#{reportsController.selectedProviderList}" label="Select Providers"
+				            filter="true" filterMatchMode="startsWith" style="width:177px"  var="t"
+				            converter="providerConverter" panelStyle="width:250px">
+				            
+				            <p:ajax event="change" listener="#{reportsController.onEntityChange}" update="idPayers" />
+				            
+				            <f:selectItems value="#{reportsController.providerList}" var="entity"
+									itemLabel="#{entity.name}" itemValue="#{entity}"  />
+
+							<p:column>
+								<h:outputText value="#{t.name}" />
+							</p:column>
+				            
+				        </p:selectCheckboxMenu>
 							
 							
 						<!-- <h:outputLabel value="Select Payer: " /> -->
-						<p:selectCheckboxMenu id="idPayers" value="#{reportsController.payerProvider}" label="Select Payers"
+						<p:selectCheckboxMenu id="idPayers" value="#{reportsController.selectedPayerList}" label="Select Payers"
 				            filter="true" filterMatchMode="startsWith" style="width:177px"  var="t"
 				            converter="payerConverter" panelStyle="width:250px">
 				            
-				            <f:selectItems value="#{reportsController.currentProvider.payerList}" var="payer"
+				            <f:selectItems value="#{reportsController.payerList}" var="payer"
 								itemLabel="#{payer.name}" itemValue="#{payer}"  />
 
 							<p:column>
