Userfix and Database settings moved to Java spring security remaining

--- a/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
+++ b/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
@@ -99,7 +99,7 @@
 						<p:outputLabel for="entity" value="Entity: "
 							rendered="#{practiseController.isSingleItemInEntityList()}" />
 						<p:outputLabel id="entity"
-							value="#{practiseController.listPractise.get(0).getName()}"
+							value="#{practiseController.getFirstEntityName()}"
 							rendered="#{practiseController.isSingleItemInEntityList()}" />
 
 						<p:outputLabel for="entities" value="Entity: "
