--- a/src/main/webapp/Views/Secured/Entity/EntityView.xhtml
+++ b/src/main/webapp/Views/Secured/Entity/EntityView.xhtml
@@ -2,7 +2,8 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:sec="http://www.springframework.org/security/tags">
 <h:head>
 </h:head>
 
@@ -18,7 +19,7 @@
 			<ui:define name="mainContent">
 				<h2>Entity Details</h2>
 
-				<h:form>
+				<h:form rendered="#{sec:areAnyGranted('ROLE_ROOT_ADMIN,ROLE_ROOT_USER')}">
 					<p:commandButton value="Create" update=":addForm"
 						action="#{entityController.clearData()}"
 						oncomplete="PF('addDlg').show();" />
