--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -17,7 +17,7 @@
 			<ui:define name="mainContent">
 				<h2>Provider Details</h2>
 				
-				<h:form rendered="#{sharedData.currentUser.role.canProviderAdd}">
+				<h:form rendered="#{sharedData.currentUser.permission.canProviderAdd}">
 					<p:commandButton value="Create" update=":myForm"
 						action="#{providerController.clearData()}"
 								oncomplete="PF('Dlg1').show();"
@@ -67,7 +67,7 @@
 						</p:column>
 
 						
-						<p:column headerText="Edit" width="80" rendered="#{sharedData.currentUser.role.canProviderEdit}">
+						<p:column headerText="Edit" width="80" rendered="#{sharedData.currentUser.permission.canProviderEdit}">
 							<p:commandButton icon="ui-icon-pencil" update=":myForm"
 								oncomplete="PF('Dlg1').show();" 
 								 action="#{providerController.updateClicked(provider)}" />
