--- a/src/main/webapp/Views/Template/MainTemplate.xhtml
+++ b/src/main/webapp/Views/Template/MainTemplate.xhtml
@@ -30,7 +30,7 @@
     </div>
     <ui:debug/>
  
-    <div id="footer">
+    <div>
         <ui:insert name="footer">
             <ui:include src="/Views/Template/Footer.xhtml" />
         </ui:insert>
